# mlflow-eval-agent

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  databricks.yml  eval_tasks.json  pyproject.toml
.claude/: settings.local.json
app/: __init__.py  auth.py  main.py  requirements.txt
benchmarks/: BENCHMARK_PLAN.md  __init__.py
docs/: agent-communication-flow.md  agent-communication-flow.mmd  agent-flow-simplified.mmd  architecture-overview.mmd  blog-draft.md  databricks-job-plan.md
evaluation/: __init__.py  conftest.py  eval_dataset.py  generated_eval.py  run_eval.py  run_evaluation.py  scorers.py  skill_scorers.py  test_data.py  test_integration_eval.py  test_unit_agent_routing.py  test_unit_ordering.py  test_unit_tool_calls.py
ideas/: filesystem_state_management.md  lakebase_state_management.md  selective_context_and_sessions.md  skill_updater_architecture.md
notebooks/: run_eval_agent.py
prompts/: __init__.py  initializer.md  system.md  trace-analyzer.md  worker.md
scripts/: analyze_trace.py  analyze_traces_batch.py  skill_benchmark.py  skill_eval_pipeline.py  smoke_test_mlflow_tools.py
src/: CONTEXT_OPTIMIZATION.md  IMPLEMENTATION_PLAN.md  README.md  TOKEN_TRACKING.md  __init__.py  agent.py  cli.py  config.py  databricks_auth.py  mlflow_client.py  mlflow_ops.py  runtime.py  skills.py  test_harness.py  test_local_agent.py  tool_compression.py  tools.py  workspace.py
tests/: README.md  __init__.py  conftest.py  test_agent_config.py  test_context_optimization.py  test_selective_context.py  test_sessions.py  test_skills.py  (+1 more)
(+62 files in other folders)
